// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display correct information for changes 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-41fc3610="" tabindex="-1" aria-label="Avatar of {displayName}" role="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="--size: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-252db2c7="" class="rich-text--wrapper">You changed <span class="rich-text-file rich-text--component" data-v-252db2c7=""><!----> <a href="http://localhost:8080/index.php/f/776">Test file - renamed.md</a> <!----></span></div>
      <div data-v-252db2c7="" class="rich-text--wrapper"></div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for comments 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-41fc3610="" tabindex="-1" aria-label="Avatar of {displayName}" role="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="--size: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-252db2c7="" class="rich-text--wrapper">You commented</div>
      <div data-v-252db2c7="" class="rich-text--wrapper">A comment</div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for creations 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-41fc3610="" tabindex="-1" aria-label="Avatar of {displayName}" role="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="--size: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-252db2c7="" class="rich-text--wrapper">You created <span class="rich-text-file rich-text--component" data-v-252db2c7=""><!----> <a href="http://localhost:8080/index.php/f/776">Test file.md</a> <!----></span></div>
      <div data-v-252db2c7="" class="rich-text--wrapper"></div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for favorites 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-41fc3610="" tabindex="-1" aria-label="Avatar of {displayName}" role="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="--size: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-252db2c7="" class="rich-text--wrapper">Added to favorites</div>
      <div data-v-252db2c7="" class="rich-text--wrapper"></div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for moves 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-41fc3610="" tabindex="-1" aria-label="Avatar of {displayName}" role="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="--size: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-252db2c7="" class="rich-text--wrapper">You moved <span class="rich-text-file rich-text--component" data-v-252db2c7=""><!----> <a href="http://localhost:8080/index.php/f/776">Test file.md</a> <!----></span> to <span class="rich-text-file rich-text--component" data-v-252db2c7=""><!----> <a href="http://localhost:8080/index.php/f/753">Documents</a> <!----></span></div>
      <div data-v-252db2c7="" class="rich-text--wrapper"></div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for renames 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-41fc3610="" tabindex="-1" aria-label="Avatar of {displayName}" role="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="--size: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-252db2c7="" class="rich-text--wrapper">You renamed <span class="rich-text-file rich-text--component" data-v-252db2c7=""><!----> <a href="http://localhost:8080/index.php/f/776">Test file - renamed.md</a> <!----></span> to <span class="rich-text-file rich-text--component" data-v-252db2c7=""><!----> <a href="http://localhost:8080/index.php/f/776">Test file - renamed - looooooooong.md</a> <!----></span></div>
      <div data-v-252db2c7="" class="rich-text--wrapper"></div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for shares 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-41fc3610="" tabindex="-1" aria-label="Avatar of {displayName}" role="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="--size: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-252db2c7="" class="rich-text--wrapper">Shared as public link</div>
      <div data-v-252db2c7="" class="rich-text--wrapper"></div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for tags 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-41fc3610="" tabindex="-1" aria-label="Avatar of {displayName}" role="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="--size: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-252db2c7="" class="rich-text--wrapper">Added system tag <strong class="rich-text--component" data-v-252db2c7="">tag1</strong></div>
      <div data-v-252db2c7="" class="rich-text--wrapper"></div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;

exports[`Display correct information for unfavorites 1`] = `
<div>
  <li class="activity-entry">
    <div data-v-41fc3610="" tabindex="-1" aria-label="Avatar of {displayName}" role="" class="avatardiv popovermenu-wrapper activity-entry__icon" style="--size: 15px; line-height: 15px; font-size: 8px; background-color: rgb(0, 130, 201);">
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
    <div class="activity-entry__content">
      <div data-v-252db2c7="" class="rich-text--wrapper">Removed from favorites</div>
      <div data-v-252db2c7="" class="rich-text--wrapper"></div>
    </div> <span class="activity-entry__date has-tooltip" data-original-title="null">11 days ago</span>
  </li>
</div>
`;
